--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     ],
     "require": {
         "php": ">=7.3.0",
-        "illuminate/support": "^5.3 || ^6.0 || ^7.0",
-        "illuminate/routing": "^5.3 || ^6.0 || ^7.0",
+        "illuminate/support": "^5.3 || ^6.0 || ^7.0 || ^8.0",
+        "illuminate/routing": "^5.3 || ^6.0 || ^7.0 || ^8.0",
         "promphp/prometheus_client_php": "^2.1"
     },
     "repositories": [
